--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
 
   <div class="container">
-      <div class="car">
+      <div id="car" class="car">
         <img class="car-size" src="./images/f1.svg" alt="F1 Race car">
       </div>
   </div>
