--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 <body>
 
   <div class="container">
-      <div id="car" class="car">
-        <img class="car-size" src="./images/f1.svg" alt="F1 Race car">
-      </div>
+
+        <img id="car" class="car-size" src="./images/f1.svg" alt="F1 Race car">
+
   </div>
 
   <script src="./main.js"></script>
